feat: day 5 part 1

--- a/templates/main.py.jinja
+++ b/templates/main.py.jinja
@@ -3,12 +3,12 @@ import os
 
 
 def main():
-    if os.path.exists("aoc_2024/{{ puzzle_name }}/input.txt"):
-        with open("aoc_2024/{{ puzzle_name }}/input.txt") as f:
+    if os.path.exists("aoc_2024/{{ day }}_{{ puzzle_name }}/input.txt"):
+        with open("aoc_2024/{{ day }}_{{ puzzle_name }}/input.txt") as f:
             data = f.read()
     else:
         data = get_input({{ day }}, {{ year }})
-        with open("aoc_2024/{{ puzzle_name }}/input.txt", "w") as f:
+        with open("aoc_2024/{{ day }}_{{ puzzle_name }}/input.txt", "w") as f:
             f.write(data)
     print(data)
 
